# rusted-rails-microservices

rails-api/: Gemfile
rails-api/app/controllers/api/v1/: posts_controller.rb
rails-api/app/models/: author.rb  post.rb
rails-api/config/: routes.rb  secrets.yml
rails-api/db/: schema.rb
rails-api/db/migrate/: 20161021152042_create_posts.rb  20161021152107_create_authors.rb  20161021152249_add_author_reference_to_posts.rb
rails-api/spec/factories/: post_factory.rb
rails-api/spec/unit/: author_test.rb  post_test.rb
rails-api/test/models/: author_test.rb
rust-archive/: Cargo.toml
rust_archive/: .env  Cargo.toml
rust_archive/migrations/20160520100926_create_posts_table/: up.sql
rust_archive/migrations/20160617142140_create_users_table/: up.sql
rust_archive/src/: lib.rs  models.rs
