[package]
name = "rustweb"
version = "0.1.0"
authors = ["hiimtaylorjones <taylorjonessoftware@gmail.com>"]

[dependencies]
diesel = "0.8.0"
diesel_codegen = { version = "0.8.0", features = ["postgres"] }
dotenv = "0.8.0"
hyper = { version = "0.9", default-features = false, features = ["security-framework"] }
rustc-serialize = "0.3.19"
